Adjusting padding on .inner-about to fix email a link overflow.

--- a/css/layout.css
+++ b/css/layout.css
@@ -105,7 +105,7 @@ video {
 
 .about-inner {
   margin-top: 20px;
-  padding: 20px;
+  padding: 15px;
   border: 1px solid var(--primary-color);
 }
 
